--- a/AUTHORS
+++ b/AUTHORS
@@ -5,7 +5,7 @@ Authors & Maintainers
 ---------------------
 
  * Alessio Gerace <alessio.gerace __at__ gmail.com>
-
+ * Akshay Arora <akshay __at__ kivy.org>
 
 
 Contributors
